syntax = "proto3";
package swp.p1.a2a.v1;

// Normative P1 schema annex for A2A profile payloads.

message Handshake {
  string agent_id = 1;
  repeated string capabilities = 2;
}

message Task {
  bytes task_id = 1;
  string kind = 2;
  bytes input = 3;
}

message Event {
  bytes task_id = 1;
  string message = 2;
  bytes event_payload = 3;
}

message Result {
  bytes task_id = 1;
  bool ok = 2;
  bytes output = 3;
  string error_message = 4;
}

message Payload {
  oneof body {
    Handshake handshake = 1;
    Task task = 2;
    Event event = 3;
    Result result = 4;
  }
}
